--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <i class="fas fa-gamepad"></i>
                         </div>
                         <h3>Playing Games</h3>
-                        <p>Action and adventure games enthusiast here</p>
+                        <p>Strategy and adventure games enthusiast</p>
                     </div>
                     <div class="hobby-card">
                         <div class="hobby-icon">
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <h3>ITEC 101 Project 2025</h3>
-                        <p>A foundational project for the ITEC 101 course, demonstrating basic programming concepts and problem-solving skills on the Python Programming Language.</p>
+                        <p>A foundational project for the ITEC 101 course, demonstrating basic programming concepts and problem-solving skills.</p>
                         <div class="project-footer">
                             <div class="tech-stack">
                                 <span class="tech-tag">HTML</span>
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <h3>Entrep Day Project 2025</h3>
-                        <p>A business project developed for Entrepreneurship day, focusing on market analysis and business planning within a selected time frame.</p>
+                        <p>A business project developed for Entrepreneurship day, focusing on market analysis and business planning.</p>
                         <div class="project-footer">
                             <div class="tech-stack">
                                 <span class="tech-tag">Market Research</span>
@@ -214,10 +214,11 @@
                             </div>
                         </div>
                         <h3>PATHFIT Project 2025</h3>
-                        <p>Final project for PATHFIT 1, demonstrating understanding of physical fitness principles and staying healthy in life.</p>
+                        <p>Final project for PATHFIT 1, demonstrating understanding of physical fitness principles and exercise planning.</p>
                         <div class="project-footer">
                             <div class="tech-stack">
                                 <span class="tech-tag">Fitness Planning</span>
+                                <span class="tech-tag">Exercise Science</span>
                             </div>
                         </div>
                     </article>
@@ -289,5 +290,3 @@
     </footer>
 </body>
 </html>
-
-
