--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <a href="https://www.youtube.com/watch?v=vabnZ9-ex7o" target="_blank" class="music-link">
                                 <i class="fab fa-youtube"></i> Come as you are - Nirvana
                             </a>
-                            <a href="https://www.youtube.com/watch?v=QLK13H7nats" target="_blank" class="music-link">
+                            <a href="https://youtu.be/yaFf6RfAZz0?si=dW7X7Kgf8jusO58_" target="_blank" class="music-link">
                                 <i class="fab fa-youtube"></i> Sariling Multo - IV of Spades
                             </a>
                             <a href="https://www.youtube.com/watch?v=r8OipmKFDeM" target="_blank" class="music-link">
@@ -428,3 +428,4 @@
     </footer>
 </body>
 </html>
+
