--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <a href="https://www.youtube.com/watch?v=vabnZ9-ex7o" target="_blank" class="music-link">
                                 <i class="fab fa-youtube"></i> Come as you are - Nirvana
                             </a>
-                            <a href="https://youtu.be/yaFf6RfAZz0?si=dW7X7Kgf8jusO58_" target="_blank" class="music-link">
+                            <a href="https://www.youtube.com/watch?v=QLK13H7nats" target="_blank" class="music-link">
                                 <i class="fab fa-youtube"></i> Sariling Multo - IV of Spades
                             </a>
                             <a href="https://www.youtube.com/watch?v=r8OipmKFDeM" target="_blank" class="music-link">
@@ -242,24 +242,7 @@
                         </div>
                     </div>
                     
-                    <div class="movie-card">
-                        <div class="movie-poster">
-                            <img src="https://image.tmdb.org/t/p/w500/oJpOYPpVWyPRg1vLRX0dE1jf2Ck.jpg" alt="The Great Gatsby Poster">
-                            <div class="movie-overlay">
-                                <div class="movie-info">
-                                    <h3>The Great Gatsby</h3>
-                                    <p>2013 • Drama, Romance</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="movie-details">
-                            <h3>The Great Gatsby</h3>
-                            <div class="movie-meta">
-                                <span class="movie-year">2013</span>
-                                <span class="movie-rating">7.2/10</span>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -422,10 +405,9 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 James Edward Almazan. All Rights Reserved.</p>
-                <p class="footer-subtext">Built with passion for technologies</p>
+                <p class="footer-subtext">Built with passion for technology</p>
             </div>
         </div>
     </footer>
 </body>
 </html>
-
