--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <i class="fas fa-music"></i>
                         </div>
                         <h3>Listening to Music</h3>
-                        <p>Various genres to relax and focus</p>
+                        <p>Various songs I listen to from time to time</p>
                         <div class="music-links">
                             <a href="https://www.youtube.com/watch?v=vabnZ9-ex7o" target="_blank" class="music-link">
                                 <i class="fab fa-youtube"></i> Come as you are - Nirvana
@@ -411,3 +411,4 @@
     </footer>
 </body>
 </html>
+
