--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h3>University</h3>
-                                    <p>First Year Student</p>
+                                    <p>First Year Student at LSPU SPCC</p>
                                 </div>
                             </div>
                             <div class="info-card">
@@ -411,4 +411,5 @@
     </footer>
 </body>
 </html>
+
 
